<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header_text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/columnA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/column_A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell12"
        app:layout_constraintEnd_toStartOf="@+id/columnB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <TextView
        android:id="@+id/columnAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/column_AB"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/submission2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/columnB"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <TextView
        android:id="@+id/tableCell11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell12"
        app:layout_constraintEnd_toStartOf="@+id/tableCell21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnA" />

    <TextView
        android:id="@+id/tableCell21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnB" />

    <TextView
        android:id="@+id/tableCell13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell14"
        app:layout_constraintEnd_toStartOf="@+id/tableCell23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCell12" />

    <TextView
        android:id="@+id/tableCell23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCell22" />

    <TextView
        android:id="@+id/tableCell24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCell22" />

    <TextView
        android:id="@+id/tableCell14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableCell24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCell12" />

    <TextView
        android:id="@+id/tableCell12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tableCell22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <TextView
        android:id="@+id/tableCell22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_letter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <TextView
        android:id="@+id/columnB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/column_B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableCell22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <EditText
        android:id="@+id/submission2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableCell22"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <EditText
        android:id="@+id/submission3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/submission4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableCell23"
        app:layout_constraintTop_toBottomOf="@+id/submission2" />

    <EditText
        android:id="@+id/submission1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/submission2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableCell21"
        app:layout_constraintTop_toBottomOf="@+id/columnAB" />

    <EditText
        android:id="@+id/submission4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableCell24"
        app:layout_constraintTop_toBottomOf="@+id/submission2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableCell24" />

</androidx.constraintlayout.widget.ConstraintLayout>